arrumei alguns comandos js.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./ex010.css" />
-    <script src="./ex010.js"></script>
+    <script type="text/javascript" src="./ex010.js"></script>
     <title>DETRAN</title>
   </head>
   <body>
@@ -14,6 +14,7 @@
         <fieldset>
           Velocidade do Carro:
           <input type="number" name="txtvel" id="txtvel" /> km/h
+
           <input type="button" value="Verificar" onclick="calcular()" />
         </fieldset>
       </form>
